[package]
name = "lalrpop_test"
version = "0.1.0"
authors = ["sim82 <simberger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2"
handy = "0.1"
serde = "1"
serde_json = "1"
serde_yaml = "*"
bincode = "1"
