[package]
name = "lalrpop_test"
version = "0.1.0"
authors = ["sim82 <simberger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies.lalrpop] # <-- We added this and everything after!
version = "^0.19"
features = ["lexer"]

[dependencies]
lalrpop-util = "^0.19"
regex = "0.2"
handy = "0.1"
serde = "1"
serde_json = "1"
serde_yaml = "*"
bincode = "1"
log = "0.4"
env_logger = "0.7"
# toml = "*"

[profile.dev]
opt-level = 2